# RTS_proj

./: .gitignore  CMakeLists.txt  organizator.cpp  readme.md
headers/: organizator.h
simScript/: simScript.py
src/: driver.cpp  logika.cpp  main.cpp  organizator.cpp  tcp_server.cpp
src/app/context/: context.ixx
src/app/dispatcher/: dispatcher.ixx
src/app/tasks/: tasks.ixx
src/core/event/: event.ixx
src/core/eventData/: eventData.ixx
src/core/queue/: queue.ixx
src/core/scheduler/: scheduler.ixx
src/core/task/: task.ixx
src/core/time/: time.ixx
src/system/config/: config.ixx
